# ComfyUI-kaola-heartMuLa

./: README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt  test_transcriptor.py
examples/: heart_transcriptor_basic.json
heartlib/heartmula/: modeling_heartmula.py
heartlib/pipelines/: music_generation.py
