[project]
name = "comfyui-kaola-heartmula"
description = "ComfyUI node for HeartMuLa HeartTranscriptor — Whisper-based lyrics transcription optimized for music scenes"
version = "0.0.1"
license = { text = "Apache-2.0" }
dependencies = [
    "torch",
    "torchaudio",
    "transformers>=4.40.0",
    "soundfile",
]

[project.urls]
Repository = "https://github.com/kana112233/ComfyUI-kaola-heartMuLa"

[tool.comfy]
PublisherId = "kaola"
DisplayName = "HeartMuLa HeartTranscriptor"
Icon = ""

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
